// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A FieldTextArea 1`] = `
.c4 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c4 .c6 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c4 textarea {
  height: 6.25rem;
  width: 16rem;
  resize: both;
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  min-height: 6.25rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
}

.c4 textarea:hover {
  border-color: #C1C6CC;
}

.c4 textarea:focus,
.c4 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c0 {
  width: 13rem;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0.5rem;
  display: grid;
  grid-template-areas: "label detail" "input input" "messages messages";
}

.c0 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c0 .c5 {
  grid-area: messages;
}

.c0 .c7 {
  width: 13rem;
}

.c0 .c9 {
  width: 100%;
}

.c0 .c1 {
  grid-area: label;
  padding-bottom: 0.5rem;
}

.c0 .c10 {
  grid-area: detail;
  justify-self: end;
}

.c0 .c8 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="FieldTextArea"
  >
    this is a label
  </label>
  <div
    className="c3 "
  >
    <div
      className="c4 "
    >
      <textarea />
    </div>
  </div>
  <div
    className="c5 "
  />
</div>
`;

exports[`A FieldTextArea with a validation message 1`] = `
.c5 {
  color: #CC1F36;
  width: 1rem;
  height: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c10 .c6 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c4 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c4 .c6 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

.c4 textarea {
  height: 6.25rem;
  width: 16rem;
  resize: both;
  border: solid 1px;
  border-color: #DEE1E5;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  min-height: 6.25rem;
  padding: 0.5rem 0.75rem;
  padding-right: 2rem;
  border-color: #ED3B53;
}

.c4 textarea:hover {
  border-color: #C1C6CC;
}

.c4 textarea:focus,
.c4 textarea:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c4 textarea:hover {
  border-color: #CC1F36;
}

.c4 textarea:focus,
.c4 textarea:focus-within {
  border-color: #CC1F36;
  box-shadow: 0 0 0 2px #FFE5E9;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c9 {
  font-size: 0.75rem;
  color: #CC1F36;
}

.c0 {
  width: 13rem;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0.5rem;
  display: grid;
  grid-template-areas: "label detail" "input input" "messages messages";
}

.c0 .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: input;
}

.c0 .c7 {
  grid-area: messages;
}

.c0 .c11 {
  width: 13rem;
}

.c0 .c12 {
  width: 100%;
}

.c0 .c1 {
  grid-area: label;
  padding-bottom: 0.5rem;
}

.c0 .c13 {
  grid-area: detail;
  justify-self: end;
}

.c0 .c8 {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="errorMessage"
  >
    this is a label
  </label>
  <div
    className="c3 "
  >
    <div
      className="c4 "
    >
      <textarea />
      <div
        className="c5 c6 "
        color="palette.red500"
        size="1rem"
      >
        <svg
          fill="currentColor"
          height="100%"
          viewBox="0 0 22 19"
          width="100%"
        >
          <title>
            Warning
          </title>
          <path
            d="M0 19h22L11 0 0 19zm12-3h-2v-2h2v2zm0-4h-2V8h2v4z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c7 "
  >
    <div
      className="c8 c9"
    >
      This is an error
    </div>
  </div>
</div>
`;
